--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@lowkey/react-native-gif": "^3.1.0",
+    "@react-navigation/native": "^6.0.8",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-reanimated": "^2.4.1",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-root-import": "^6.6.0"
   },
   "private": true
 }
