--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@expo/vector-icons": "^12.0.5",
     "@lowkey/react-native-gif": "^3.1.0",
     "@react-native-community/blur": "^3.6.0",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-blur": "~11.0.0",
