--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@lowkey/react-native-gif": "^3.1.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -29,9 +30,9 @@
     "react-native": "0.67.4",
     "react-native-animatable": "^1.3.3",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
