--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.67.4",
     "react-native-animatable": "^1.3.3",
     "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5"
