--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.67.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "3.3.2",
